refactor(CheckList): melhorando validação para o envio de CheckLists